tests/NormalTests/paczka1/fuzzy1/62322430.err
Error in line 4: sU7QG7Hc A690 7,5
Error in line 6: IKLkuS A690 45,7
Error in line 17: sU7QG7Hc A360 833,7
Error in line 18: sU7QG7Hc A690 48,2
Error in line 15: ZkdDNGMIJ A709 32,9
Error in line 16: xdhTHLYfqE S295 24,0
